crates/layout/tests/snapshots/render_plan_snapshots__snapshot_heading_levels_fan_out.snap
---
source: crates/layout/tests/render_plan_snapshots.rs
assertion_line: 104
expression: summarize(&plan)
---
page_count: 1
block_box_count: 7
dirty_rect_count: 1
blocks:
  - page_index: 0
    block_index: 0
    kind: Heading-1
    line_count: 1
    height_px_round: 58
    origin_x_px_round: 0
  - page_index: 0
    block_index: 1
    kind: Heading-2
    line_count: 1
    height_px_round: 50
    origin_x_px_round: 0
  - page_index: 0
    block_index: 2
    kind: Heading-3
    line_count: 1
    height_px_round: 42
    origin_x_px_round: 0
  - page_index: 0
    block_index: 3
    kind: Heading-4
    line_count: 1
    height_px_round: 42
    origin_x_px_round: 0
  - page_index: 0
    block_index: 4
    kind: Heading-5
    line_count: 1
    height_px_round: 42
    origin_x_px_round: 0
  - page_index: 0
    block_index: 5
    kind: Heading-6
    line_count: 1
    height_px_round: 42
    origin_x_px_round: 0
  - page_index: 0
    block_index: 6
    kind: Paragraph
    line_count: 1
    height_px_round: 26
    origin_x_px_round: 0
