crates/layout/tests/snapshots/render_plan_snapshots__snapshot_small_doc_three_kinds.snap
---
source: crates/layout/tests/render_plan_snapshots.rs
assertion_line: 80
expression: summarize(&plan)
---
page_count: 1
block_box_count: 6
dirty_rect_count: 1
blocks:
  - page_index: 0
    block_index: 0
    kind: Heading-1
    line_count: 1
    height_px_round: 58
    origin_x_px_round: 0
  - page_index: 0
    block_index: 1
    kind: Paragraph
    line_count: 1
    height_px_round: 26
    origin_x_px_round: 0
  - page_index: 0
    block_index: 2
    kind: ListItem-0
    line_count: 1
    height_px_round: 22
    origin_x_px_round: 24
  - page_index: 0
    block_index: 3
    kind: ListItem-1
    line_count: 1
    height_px_round: 22
    origin_x_px_round: 40
  - page_index: 0
    block_index: 4
    kind: ListItem-0
    line_count: 1
    height_px_round: 22
    origin_x_px_round: 24
  - page_index: 0
    block_index: 5
    kind: Paragraph
    line_count: 1
    height_px_round: 26
    origin_x_px_round: 0
